--- a/sap.html
+++ b/sap.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Background Image Slider with Typing Text</title>
+    <title>Currency Conversion</title>
+    <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="edit_style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-custom">
         <a class="navbar-brand" href="#">
             <img src="logo.png" width="40" height="40" class="d-inline-block align-top" alt="Logo">
         </a>
@@ -26,71 +30,70 @@
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="#">Help</a>
                 </li>
             </ul>
         </div>
     </nav>
 
-    <!-- Image Slider -->
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <!-- Carousel -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img3.jpg" class="d-block w-100" alt="Slide 1">
+                <img src="img2.jpg" class="d-block w-100" alt="First slide">
             </div>
             <div class="carousel-item">
-                <img src="img4.jpg" class="d-block w-100" alt="Slide 2">
+                <img src="img11.jpg" class="d-block w-100" alt="Second slide">
             </div>
             <div class="carousel-item">
-                <img src="bg_img.jpg" class="d-block w-100" alt="Slide 3">
+                <img src="img12.jpg" class="d-block w-100" alt="Third slide">
             </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
 
-    <!-- Typing Text Animation and Content -->
-    <div class="content-container">
-        <div class="typing-text">Discover the Best Deals Worldwide</div>
-        
-        <div class="fade-in-text">
-            <p>We at SAP, aim to provide you
-            with the best deals available on your favourite products, WORLDWIDE!
-        </p>
-        </div>
+    <!-- Content -->
+    <div class="container">
+        <div class="typing-text">Discover the Best Deals Worldwide at SAP</div>
     </div>
-        
-        <!-- Form -->
-    <form action="#" method="post" id="myForm">
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Enter product category" name="productCategory" required>
-            <div class="input-group-append">
-                <button class="btn btn-primary" type="submit">Submit</button>
+
+    <div class="product-container">
+        <h2>Product Specifications</h2>
+        <form action="#" method="post" id="myForm">
+            <div class="input-group">
+                <input type="text" placeholder="name, category, specification" name="product" required>
+                <button id="submit" formaction="#">Submit</button>
             </div>
+        </form>
+        <div id="textBox" class="hidden">
+            This is the text that appears after clicking submit.
         </div>
-    </form>
+    </div>
 
-    <div class="footer">
-        <h1>About Us</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Expedita porro laudantium dolore.
-            Odio debitis tempore dolorum explicabo, 
-            ratione harum vero maiores labore amet accusantium autem illum alias minima atque esse?
-        </p>
-
+    <div class="positioned-card">
+        <p>Get the best deals on your favorite products now!</p>
     </div>
 
     <div class="footer">
-        <h2>Home</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Expedita porro laudantium dolore.
-            Odio debitis tempore dolorum explicabo, 
-            ratione harum vero maiores labore amet accusantium autem illum alias minima atque esse?
-        </p>
-
+        <h2>About Us</h2>
+        <p>From fashion to electronics, we've got you covered! Grab the best deals available worldwide for your favorite products right now!</p>
+        <h2>Contact Us</h2>
+        <ul>
+            <li>Phone: +91-80-66655771</li>
+            <li>Email: sapindia@gmail.com</li>
+        </ul>
     </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
