--- a/sap.html
+++ b/sap.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">About Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Help</a>
+                    <a class="nav-link" href="#">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -73,13 +73,10 @@
         <h2>Product Specifications</h2>
         <form action="#" method="post" id="myForm">
             <div class="input-group">
-                <input type="text" placeholder="name, category, specification" name="product" required>
+                <input type="text" placeholder="Enter your query here" name="product" required>
                 <button id="submit" formaction="#">Submit</button>
             </div>
         </form>
-        <div id="textBox" class="hidden">
-            This is the text that appears after clicking submit.
-        </div>
     </div>
 
     <div class="positioned-card">
